added 5 random extra panels to iterate when appending to car panels, expand fully functional with extra panels

--- a/research/research.html
+++ b/research/research.html
@@ -296,102 +296,24 @@
       </div>
 
       <div id="car-panel">
-<!--         <div id="car-panel-info-text">
+        <div id="car-panel-info-text">
           <h5 id="panel-text-placeholder">A list of cars will be displayed in this panel, personalized to your search
           with ratings, filtering options, and their closest competition!</h5>
           <img class="responsive-img" src="../img/car-panel/car-panel-image-placeholder.png" 
             id="panel-image-placeholder"/>
-        </div> -->
+        </div>
 
-        <div id='car-panel-topbar'>Your Top Matches<img id='expand-button' src='../img/car-panel/expand-button.png'/></div>
-
+<!--         <div id='car-panel-topbar'>Your Top Matches<img id='expand-button' src='../img/car-panel/expand-button.png'/></div>
+ -->
         <div id="car-panel-list">
         
-          <div class='car-panel-card'><div class='car-panel-left'><img class='car-thumbnail' src='../img/car-panel/bmw-3.png'/><div class='match-suffix'>match</div><div class='match-percent'>50%</div></div><div class='car-panel-middle'><div class='car-make'>BMW 328i</div><div class='car-price'>$52,450</div><div class='car-info'><div class='panel-selection mpg-panel'>mileage: <span class='panel-inject-1'>45</span> </div><div class='panel-selection safety-panel'> safety: <span class='panel-inject-2'>A+</span> </div><div class='panel-selection comfort-panel'> comfort: <span class='panel-inject-3'>A-</span> </div></div></div><div class='car-panel-right'><p class='edmunds-rating-suffix'>Edmund's Rating:</p><p class='edmunds-rating'>A</p><div class='blurb-suffix'> Our take:<div class='blurb'> This car drives like it looks, Amazing. The interior has a brand new (...)</div></div></div>
+<!--           <div class='car-panel-card'><div class='car-panel-left'><img class='car-thumbnail' src='../img/car-panel/bmw-3.png'/><div class='match-suffix'>match</div><div class='match-percent'>50%</div></div><div class='car-panel-middle'><div class='car-make'>BMW 328i</div><div class='car-price'>$52,450</div><div class='car-info'><div class='panel-selection mpg-panel'>mileage: <span class='panel-inject-1'>45</span> </div><div class='panel-selection safety-panel'> safety: <span class='panel-inject-2'>A+</span> </div><div class='panel-selection comfort-panel'> comfort: <span class='panel-inject-3'>A-</span> </div></div></div><div class='car-panel-right'><p class='edmunds-rating-suffix'>Edmund's Rating:</p><p class='edmunds-rating'>A</p><div class='blurb-suffix'> Our take:<div class='blurb'> This car drives like it looks, Amazing. The interior has a brand new (...)</div></div></div>
 
-          <div class='car-panel-extra'>
-            <p class='edmunds-rating-suffix-expanded'>Driving Experience:</p>
-            <div class="expanded-table">
-              <div class="expanded-table-text">
-              <ul>
-              <li>Acceleration</li>
-              <li>MPG</li>
-              <li>Handle</li>
-              <li>Turn Radius</li>
-              </ul>
-              </div>
-              <div class="expanded-table-data">
-              <ul>
-              <li>A</li>
-              <li>A</li>
-              <li>A</li>
-              <li>B</li>
-              </ul>
-              </div>              
-            </div>
-          </div>          
-          
-
-          <div class='car-panel-extra'>
-            <p class='edmunds-rating-suffix-expanded'>Safety:</p>
-            <div class="expanded-table">
-              <div class="expanded-table-text">
-              <ul>
-              <li>Driver</li>
-              <li>Passenger</li>
-              <li>Side Pole Rating</li>
-              <li>Risk of Rollover </li>
-              </ul>
-              </div>
-              <div class="expanded-table-data">
-              <ul>
-              <li>A</li>
-              <li>B</li>
-              <li>A</li>
-              <li>16%</li>
-              </ul>
-              </div>              
-            </div>
-          </div>
-
-
-          <div class='car-panel-extra'>
-            <p class='edmunds-rating-suffix-expanded'>Comfort:</p>
-            <div class="expanded-table">
-              <div class="expanded-table-text">
-              <ul>
-              <li>Leg Room</li>
-              <li>Head Room</li>
-              <li>Shoulder Room</li>
-              <li>Seat comfort</li>
-              </ul>
-              </div>
-              <div class="expanded-table-data">
-              <ul>
-              <li>A</li>
-              <li>B</li>
-              <li>A</li>
-              <li>B%</li>
-              </ul>
-              </div>              
-            </div>
-          </div>
-
-          <div class='car-panel-extra'>
-            <p class='edmunds-rating-suffix-expanded'>Comfort:</p>
-            <ul class="car-details">
-              <li>22 combined MPG</li>
-              <li>3.5L 6-cylinder</li>
-              <li>9 Speed Automatic</li>
-              <li>Front Wheel Drive</li>
-              <li>basic 4 year warranty</li>
-            </ul>
-            <a class="waves-effect waves-light btn read-more-button">Read More</a>
-          </div>          
+         <div class='car-panel-extra'> <p class='edmunds-rating-suffix-expanded'>Driving Experience:</p> <div class="expanded-table"> <div class="expanded-table-text"> <ul> <li>Acceleration</li> <li>MPG</li> <li>Handle</li> <li>Turn Radius</li> </ul> </div> <div class="expanded-table-data"> <ul> <li>A</li> <li>A</li> <li>A</li> <li>B</li> </ul> </div> </div> </div> <div class='car-panel-extra'> <p class='edmunds-rating-suffix-expanded'>Safety:</p> <div class="expanded-table"> <div class="expanded-table-text"> <ul> <li>Driver</li> <li>Passenger</li> <li>Side Pole Rating</li> <li>Risk of Rollover </li> </ul> </div> <div class="expanded-table-data"> <ul> <li>A</li> <li>B</li> <li>A</li> <li>16%</li> </ul> </div> </div> </div> <div class='car-panel-extra'> <p class='edmunds-rating-suffix-expanded'>Comfort:</p> <div class="expanded-table"> <div class="expanded-table-text"> <ul> <li>Leg Room</li> <li>Head Room</li> <li>Shoulder Room</li> <li>Seat comfort</li> </ul> </div> <div class="expanded-table-data"> <ul> <li>A</li> <li>B</li> <li>A</li> <li>B</li> </ul> </div> </div> </div> <div class='car-panel-extra'> <p class='edmunds-rating-suffix-expanded'>Comfort:</p> <ul class="car-details"> <li>22 combined MPG</li> <li>3.5L 6-cylinder</li> <li>9 Speed Automatic</li> <li>Front Wheel Drive</li> <li>Basic 4 year warranty</li> </ul> <a class="waves-effect waves-light btn read-more-button">Read More</a> </div>
 
 
 
-          </div>
+          </div> -->
 
 
 
