--- a/research/research.html
+++ b/research/research.html
@@ -34,7 +34,7 @@
             <a class="waves-effect waves-light btn-large" id="mmy-button">Make/Model/Year</a>
         </div>
         <div class="horizontal-section">
-          <h3>Select a Type of Car </h3>
+          <h3>Select a type of car </h3>
           <div class="container" id="research-container">
             <div class="row">
               <div class="col s3"><img class="responsive-img" src="../img/car-types/Alternatives.png"/></div>
@@ -58,7 +58,7 @@
           <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
         <div class="horizontal-section">
-          <h3>What's important to you</h3>
+          <h3>What's important to you?</h3>
           <p>Pick the 3 things that matter most, and we'll suggest you some cars</p>
           <div class="container" id="research-container">
             <div class="row">
@@ -82,18 +82,45 @@
           <a class="waves-effect waves-light btn next-button">Next</a>
         </div>
         <div class="horizontal-section">
-          <h3>Choose your Price</h3>
-          <p>Financing, leasing, or purchasing? We got you covered</p>
-
-
+          <h3>Choose your Price range</h3>
+          <p>Financing or Leasing? Maybe both...</p>
           <div id="payment-sliders">
-            <div id="slider" class="rslider"></div>
-            <div id="slider2" class="rslider"></div>
-            <div id="slider3" class="rslider"></div>
+            <div class="payments">
+              <div id="payment-type">Purchasing</div>
+              <div id="slider" class="rslider"></div>
+            </div>
+            <div class="payments">
+              <div id="payment-type">Leasing</div>
+              <div id="slider2" class="rslider"></div>
+            </div>
           </div>
-
-
+          <div class='button-container'>
+            <a class="waves-effect waves-light btn back-button">Back</a>
+            <a class="waves-effect waves-light btn next-button">Next</a>
+          </div>
         </div>
+        <div class="horizontal-section">
+          <h3>Comfort is important for us too!</h3>
+          <p>What on this list stands out to you? Click all that apply.</p>
+          <div class="container" id="research-container">
+            <div class="row">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Head Room </a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Leather Seats</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Leg Room</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Heated Seats</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Lumbar Support</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Memory Seats</a></div>
+            </div>
+          </div>
+          <a class="waves-effect waves-light btn back-button">Back</a>
+          <a class="waves-effect waves-light btn next-button">Next</a>
+        </div>        
 
         <!-- Vertical Section -->
         <!-- 1. Select MAKE -->
