selecting 3 flags adjust the match % now randomly

--- a/research/research.html
+++ b/research/research.html
@@ -62,13 +62,13 @@
           <p>Pick the 3 things that matter most, and we'll suggest you some cars</p>
           <div class="container" id="research-container">
             <div class="row">
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="gas-mileage-button">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust" id="gas-mileage-button">
                 Gas Mileage </a></div>
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="safety-button">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust" id="safety-button">
                 Safety</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Acceleration</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">Handling</a></div>
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories" id="comfort-button">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust" id="comfort-button">
                 Comfort</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories">High Tech
                 <img class="button-pics" id="high-tech-button" src="../img/research-buttons/industrial-robot.png">
