added a final selection slide that suggests a car or skip

--- a/research/research.html
+++ b/research/research.html
@@ -120,7 +120,39 @@
           </div>
           <a class="waves-effect waves-light btn back-button">Back</a>
           <a class="waves-effect waves-light btn next-button">Next</a>
-        </div>        
+        </div>
+        <div class="horizontal-section">
+          <h3>What's your typical commute like?</h3>
+          <p>What on this list stands out to you? Click all that apply.</p>
+          <div class="container" id="research-container">
+            <div class="row">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Highway Driving </a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                City Driving</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Always in Traffic</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Mountain Driving</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Short Distances</a></div>
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+                Long distances</a></div>
+            </div>
+          </div>
+          <a class="waves-effect waves-light btn back-button">Back</a>
+          <a class="waves-effect waves-light btn next-button">Next</a>
+        </div>
+
+        <div class="horizontal-section">
+          <h3>Is it a match?</h3>
+          <p>We think you would love this car, but feel free to say no and keep answering questions.</p>
+
+              <img src="../img/winner.png" class="responsive-img winner"/>
+
+          <a class="waves-effect waves-light btn back-button">No</a>
+          <a class="waves-effect waves-light btn next-button">Yes!</a>
+        </div>                      
 
         <!-- Vertical Section -->
         <!-- 1. Select MAKE -->
