fixed cheating bmw i3 to the very top of the list when we hit long distances on last slide

--- a/research/research.html
+++ b/research/research.html
@@ -136,7 +136,7 @@
                 Mountain Driving</a></div>
               <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
                 Short Distances</a></div>
-              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust">
+              <div class="col s4"><a class="waves-effect waves-light btn research-categories match-adjust-final-demo">
                 Long distances</a></div>
             </div>
           </div>
